# ja2-vanilla-cp

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Makefile  README.md  changes.md  clang-tidy.help.txt  compilation.md  contributors.txt  readme.md  start-from-russia-with-love.sh  start-nightops-0.3.2.sh  start-nightops-maps.sh  start-nightops.sh  update_sources.py  xx.py
.github/workflows/: build.yml
_build/lib-boost/: readme.txt
_build/solution-vs/: ja2.vcxproj  ja2.vcxproj.filters
externalized/: army-gun-choice-extended.json  bobby-ray-inventory-new.json  bobby-ray-inventory-used.json  calibres.json  dealer-inventory-tony.json  game.json  magazines.json  weapons.json
externalized/strings/: ammo-calibre-bobbyray-dut.json  ammo-calibre-bobbyray-rus.json  ammo-calibre-fr.json
ja2/: Cheats.h  FadeScreen.cc  FadeScreen.h  GameLoop.h  GameRes.h  GameScreen.h  GameSettings.cc  GameSettings.h  GameState.h  GameVersion.h  HelpScreenText.h  Init.cc  JA2Splash.cc  JA2Splash.h  JA2Types.h  LoadSaveEMail.cc  LoadSaveTacticalStatusType.cc  LoadingScreen.h  Local.h  Macro.h  MainMenuScreen.cc  MainMenuScreen.h  MercPortrait.cc  MercPortrait.h  MessageBoxScreen.cc  OptionsScreen.cc  SaveLoadGame.h  SaveLoadGame_unittest.cc  SaveLoadScreen.h  Screens.cc  Screens.h  SysGlobals.h
ja2/Editor/: CursorModes.h  EditScreen.cc  EditSys.cc  EditSys.h  EditorBuildings.h  EditorCallbacks.cc  EditorDefines.h  EditorItems.h  EditorMercs.cc  EditorTerrain.cc  ItemStatistics.h  LoadScreen.h  MessageBox.cc  MessageBox.h  NewSmooth.h  PopupMenu.h  RoadSmoothing.h  SectorSummary.h  SelectWin.h  Smooth.h  SmoothingUtils.h  SummaryInfo.h
ja2/Laptop/: AIM.cc  AIM.h  AIMArchives.cc  AIMArchives.h  AIMFacialIndex.cc  AIMHistory.h  AIMLinks.h  AIMMembers.h  AIMPolicies.cc  AIMPolicies.h  AIMSort.cc  BobbyR.h  BobbyRArmour.cc  BobbyRArmour.h  BobbyRGuns.h  BobbyRMailOrder.cc  Files.cc  (+44 more)
sgp/: Buffer.h  Button_Sound_Control.cc  Button_Sound_Control.h  Button_System.cc  Button_System.h  Container.cc  Container.h  Cursor_Control.cc  Cursor_Control.h  Debug.cc  Debug.h  EncodingCorrectors.cc  EncodingCorrectors.h  FileMan.cc  FileMan.h  FileMan_unittest.cc  Font.cc  Font.h  HImage.cc  HImage.h  ImgFmt.h  ImpTGA.cc  ImpTGA.h  Input.cc  Input.h  LibraryDataBase.cc  LibraryDataBase.h  Line.cc  Line.h  LoadSaveData.cc  LoadSaveData.h  LoadSaveData_unittest.cc  MemMan.cc  MemMan.h  MouseSystem.cc  MouseSystem.h  PCX.cc  PCX.h  PODObj.h  PlatformIO.h  (+30 more)
src/: AmmoTypeModel.cc  CalibreModel.cc  CalibreModel.h  ContentManager.h  DealerInventory.cc  DefaultContentManager.cc  DefaultContentManager.h  DefaultContentManagerUT.cc  DefaultContentManager_unittests.cc  ItemModel.cc  ItemModel.h  JsonObject.h  JsonUtility.cc  JsonUtility.h  JsonUtility_unittests.cc  MagazineModel.cc  MagazineModel.h  MercProfile.cc  ModPackContentManager.cc  ModPackContentManager.h  Soldier.cc  Soldier.h  TestUtils.cc  VanillaWeapons_unittests.cc  WeaponModels.cc  WeaponModels.h
tools/: update_sources.py
(+332 files in other folders)
